# SERVE

./: README.md  app.py  container.py  pyproject.toml
alembic/versions/: 39977015f464_init_revision.py
docker/: docker-compose.yaml
notebooks/: poc_extraction.ipynb  poc_separation_&_extraction.ipynb
serve/: errors.py  logger.py  routers.py  settings.py
serve/domain/european_parliament/: european_parliament.py  mep.py
serve/domain/vote_analysis/: amendment.py  deputy.py  errors.py  mep.py  minutes.py  page.py  vote.py
serve/infra/: european_parliament_official_source.py
serve/infra/database/: database_manager.py  errors.py  sql_model.py
serve/infra/european_parliament/: european_parliament_official_source.py  meps_sql_repository.py
serve/infra/repositories/: amendments_sql_repository.py  meps_in_memory_repository.py  meps_sql_repository.py  votes_sql_repository.py
serve/usecase/: errors.py
serve/usecase/european_parliament/: create_all_meps.py  get_all_meps.py
serve/usecase/vote_analysis/: extract_votes_from_minutes.py  get_mep_votes.py  initialize_votes_extract.py
tests/data/domain/vote_analysis/: extracted_text_page_3.txt  new_minutes_extracted_votes.txt  new_minutes_text_page_0.txt  new_minutes_text_page_6.txt  old_minutes_extracted_votes.txt  old_minutes_text_page_0.txt
tests/domain/vote_analysis/: test_amendment.py  test_deputy.py  test_mep.py  test_minutes.py  test_page.py  test_vote.py
tests/infra/european_parliament/: test_european_parliament_official_source.py
tests/usecase/vote_analysis/: test_extract_votes_from_minutes.py
