[build-system]
# Minimum requirements for the build system to execute.
requires = ["hatchling"]  # PEP 508 specifications.
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
allow-ambiguous-features = true


[project]
name = "serve"
description = "Repo of SERVE, System evaluating Environmental Resolutions Votes by the European Parlement"
version = "0.1.0"
dependencies = [
    'alembic==1.12.0',
    'fuzzywuzzy==0.18.0',
    'pandas==2.1.0',
    'pypdf==3.17.1',
    'psycopg2==2.9.9',
    'sqlalchemy==2.0.22',
    'rapidfuzz==3.5.2'
]
